--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "CHANGE THIS : Extension boilerplate",
+  "name": "Tril - Trello as Read It Lator",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "description": "Add links Trello",
+  "homepage_url": "https://github.com/vienosnotes/tril",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
